--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
                 <h1>Spread your voice to all</h1>
                 <div class="details-card">
                     <div class="details-item details-img">
-                        <img src="./img/events/cs.jpg" alt="Event">
+                        <img src="./img/events/CS.jpg" alt="Event">
                     </div>
                     <div class="details-item details-category">
                         <h5>Details</h5>
