Update of member lists

--- a/index.html
+++ b/index.html
@@ -466,13 +466,13 @@
                     <div eventNo="5" data-wow-duration="1s" class="event wow fadeInUp">
                         <div class="card">
                             <div class="card-item card-front">
-                                <img src="./img/events/cs.jpg" alt="cs-go">
+                                <img src="./img/events/CS.jpg" alt="cs-go">
                                 <div class="headText">
                                     <p>Graise Your Voice</p>
                                 </div>
                             </div>
                             <div class="card-item card-back">
-                                <img src="./img/events/cs.jpg" alt="cs-go">
+                                <img src="./img/events/CS.jpg" alt="cs-go">
                                 <div class="eventName">
                                     <p>Graise your Voice</p>
                                 </div>
@@ -530,10 +530,10 @@
                     <img src="./img/about/2.jpg" alt="about">
                 </div>
                 <div class="about-content">
-                    <h5>October 2018</h5>
-                    <h5>Tireless journey of 7 months</h5>
+                    <h5>April 2020</h5>
+                    <h5>Tireless journey of 25 months</h5>
                     <p>
-                        After 7 glorious and successful months we are coming up with a new platform with 20,000 likers to represent them.
+                        After 25 glorious and successful months we are coming up with a new platform with 20,000 likers to represent them.
                     </p>
                 </div>
                 <div class="about-blank"></div>
@@ -574,32 +574,84 @@
             <div class="wow slideInRight team-members">
                 <h4>PAGE ADMINISTRATION</h4>
                 <div class="team-member">
-                    <h5>Nabarun Sil</h5>
+                    <h5>Nabarun Shil</h5>
                     <p>Founder of Page & Writer</p>
                 </div>
                 <div class="team-member">
                     <h5>Subhajit Biswas</h5>
-                    <p>Lead Admin & Writer</p>
+                    <p>Co-founder & Writer</p>
                 </div>
                 <div class="team-member">
                     <h5>Debojyoti Das</h5>
                     <p>Admin-Writer & Web Developer</p>
                 </div>
+                <div class="team-member">
+                    <h5>Abhijit Biswas</h5>
+                    <p>Co-founder & Writer</p>
+                </div>
             </div>
             <div class="wow slideInLeft team-members">
-                <h4>MAJOR WRITERS</h4>
+                <h4>ALL OF OUR MEMBERS</h4>
                 <!-- <p>THE PEOPLE WHO MANAGED RELATIONS WITH SPONSERS</p> -->
                 <div class="team-member">
-                    <h5>Priyanko</h5>
-                    <p>Lead Writer</p>
+                    <h5>Swathi</h5>
+                    <p>Writer & Memer</p>
                 </div>
                 <div class="team-member">
-                    <h5>Gargi</h5>
-                    <p>Writer</p>
+                    <h5>Ranajoy</h5>
+                    <p>Writer & Musician</p>
                 </div>
                 <div class="team-member">
-                    <h5>Subrataoooooooooooooooo</h5>
-                    <p>Writer</p>
+                    <h5>Sweta</h5>
+                    <p>Content Writer</p>
+                </div>
+                <div class="team-member">
+                    <h5>Esha</h5>
+                    <p>Vocalist & Singer</p>
+                </div>
+                <div class="team-member">
+                    <h5>Sreeza</h5>
+                    <p>Content Writer</p>
+                </div>
+                <div class="team-member">
+                    <h5>Pranita</h5>
+                    <p>Writer & Penographer</p>
+                </div>
+                <div class="team-member">
+                    <h5>Rishov</h5>
+                    <p>Content Writer</p>
+                </div>
+                <div class="team-member">
+                    <h5>Subhadip</h5>
+                    <p>Writer & PR</p>
+                </div>
+                <div class="team-member">
+                    <h5>Nabodisha</h5>
+                    <p>Writer & Photographer</p>
+                </div>
+                <div class="team-member">
+                    <h5>Arindam</h5>
+                    <p>Writer & Photographer</p>
+                </div>
+                <div class="team-member">
+                    <h5>Ritam</h5>
+                    <p>Content Writer</p>
+                </div>
+                <div class="team-member">
+                    <h5>Sanandita</h5>
+                    <p>Content Writer</p>
+                </div>
+                <div class="team-member">
+                    <h5>Rohit</h5>
+                    <p>Content Writer</p>
+                </div>
+                <div class="team-member">
+                    <h5>Anisha</h5>
+                    <p>Content Writer</p>
+                </div>
+                <div class="team-member">
+                    <h5>Rumeli</h5>
+                    <p>Content Writer & Dancer</p>
                 </div>
             </div>
             <div class="wow slideInRight team-members">
@@ -607,9 +659,9 @@
                 <!-- <p>THE PEOPLE WHO DEVELOPED THIS WEBSITE AND OTHER CREATIVE STUFF</p> -->
                 <div class="team-member">
                     <a target="_blank" href="#">
-                        <h5>Pallab</h5>
+                        <h5>Dibyendu Bose</h5>
                     </a>
-                    <p>Minor Writer</p>
+                    <p>Singer & Vocalist</p>
                 </div>
                 <div class="team-member">
                     <a target="_blank" href="#">
@@ -619,9 +671,9 @@
                 </div>
                 <div class="team-member">
                     <a target="_blank" href="#">
-                        <h5>Abhijit Biswas</h5>
+                        <h5>Subrata Oraw</h5>
                     </a>
-                    <p>Writer come Editor</p>
+                    <p>Content Writer & Editor</p>
                 </div>
             </div>
 
@@ -679,7 +731,7 @@
                         <p>
                             <i class="fa fa-phone" aria-hidden="true"></i> +91-8116040511
                             <br>
-                            <i class="fa fa-envelope" aria-hidden="true"></i> debojyoti.das52@gmail.com
+                            <i class="fa fa-envelope" aria-hidden="true"></i> debojyoti.das@purushtantra.com
                         </p>
 
                         <div>
@@ -694,14 +746,14 @@
     <footer class="wow fadeInUp" data-wow-offset="0">
         <div class="container">
             <div style="float:left; line-height: 40px;">
-                Copyright © 2018-19
+                Copyright © 2020-21
                 <a class="name" href="http://github.com/debojyotidas">DEBOJYOTI DAS</a>
             </div>
             <div style="float:right">
                 <a class="socialBtn" target="_blank" href="https://www.facebook.com/debojyoti.das.180">
                     <i class="fa fa-facebook"></i>
                 </a>
-                <a class="socialBtn" href="mailto:debojyoti.das52@gmail.com">
+                <a class="socialBtn" href="mailto:debojyoti.das@purushtantra.com">
                     <i class="fa fa-envelope"></i>
                 </a>
                 <a class="socialBtn" href="tel:+91-8116040511">
