--- a/index.html
+++ b/index.html
@@ -635,7 +635,7 @@
                 </div>
                 <div class="team-member">
                     <h5>Ritam</h5>
-                    <p>Content Writer</p>
+                    <p>Writer & Memer</p>
                 </div>
                 <div class="team-member">
                     <h5>Sanandita</h5>
@@ -651,7 +651,11 @@
                 </div>
                 <div class="team-member">
                     <h5>Rumeli</h5>
-                    <p>Content Writer & Dancer</p>
+                    <p>Writer & Dancer</p>
+                </div>
+                <div class="team-member">
+                    <h5>Swarupa</h5>
+                    <p>Writer & Dancer</p>
                 </div>
             </div>
             <div class="wow slideInRight team-members">
