--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0; user-scalable=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <meta name="author" content="Ritwick Dey, Prithwee Das" >
-    <title>DEBOJYOTI DAS</title>
+    <meta name="author" content="Debojyoti Das" >
+    <title>PURUSHTANTRA</title>
     <link rel="shortcut icon" href="./img/logo.jpg?v=1" type="image/x-icon">
     <!-- <link rel="stylesheet" href="css/normalize.css"> -->
     <link rel="stylesheet" href="css/skeleton.min.css">
@@ -733,7 +733,7 @@
                             <i class="fa fa-map-marker"></i>
                         </h5>
                         <p>
-                            <i class="fa fa-phone" aria-hidden="true"></i> +91-8116040511
+                            <i class="fa fa-phone" aria-hidden="true"></i> +91-7278919895
                             <br>
                             <i class="fa fa-envelope" aria-hidden="true"></i> debojyoti.das@purushtantra.com
                         </p>
@@ -754,13 +754,13 @@
                 <a class="name" href="http://github.com/debojyotidas">DEBOJYOTI DAS</a>
             </div>
             <div style="float:right">
-                <a class="socialBtn" target="_blank" href="https://www.facebook.com/debojyoti.das.180">
+                <a class="socialBtn" target="_blank" href="https://www.facebook.com/134416510668694">
                     <i class="fa fa-facebook"></i>
                 </a>
                 <a class="socialBtn" href="mailto:debojyoti.das@purushtantra.com">
                     <i class="fa fa-envelope"></i>
                 </a>
-                <a class="socialBtn" href="tel:+91-8116040511">
+                <a class="socialBtn" href="tel:+91-7278919895">
                     <i class="fa fa-phone"></i>
                 </a>
             </div>
