--- a/index.html
+++ b/index.html
@@ -751,7 +751,7 @@
         <div class="container">
             <div style="float:left; line-height: 40px;">
                 Copyright © 2020-21
-                <a class="name" href="http://github.com/debojyotidas">DEBOJYOTI DAS</a>
+                <a class="name" href="https://www.facebook.com/134416510668694">PURUSHTANTRA</a>
             </div>
             <div style="float:right">
                 <a class="socialBtn" target="_blank" href="https://www.facebook.com/134416510668694">
