--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
                     </div>
                     <div class="details-item details-btns">
                         <button class="btn details-btn" id="techBtn">Ask Now</button>
-                        <button class="btn details-btn RegisterBtn">Query</button>
+                        <button class="btn details-btn RegisterBtn">Rules</button>
                         <div class="bold green small-font">(You can also contact our admin or members)</div>
                         <div class="bold red small-font">selected questions will be publish by page including your name</div>
                     </div>
@@ -138,8 +138,8 @@
 
                     </div>
                     <div class="details-item details-btns">
-                        <button class="btn details-btn" id="bmaBtn">Rules</button>
-                        <button class="btn details-btn RegisterBtn">Query</button>
+                        <button class="btn details-btn" id="bmaBtn">Join Page</button>
+                        <button class="btn details-btn RegisterBtn">Rules</button>
                         <div class="bold green small-font">Unity Unity and Only Unity</div>
                         <div class="bold red small-font">Because unity is strength</div>
                     </div>
@@ -195,8 +195,8 @@
 
                     </div>
                     <div class="details-item details-btns">
-                        <button class="btn details-btn" id="codeStromBtn">Rules</button>
-                        <button class="btn details-btn RegisterBtn">Send Now</button>
+                        <button class="btn details-btn" id="codeStromBtn">Send Now</button>
+                        <button class="btn details-btn RegisterBtn">Rules</button>
                         <div class="bold green small-font">Innovative Thinking Always gets first Priority</div>
                         <div class="bold red small-font">send your ideas through Facebook Inbox</div>
                     </div>
@@ -251,8 +251,8 @@
                         </div>
                     </div>
                     <div class="details-item details-btns">
-                        <button class="btn details-btn" id="photoBtn">Query</button>
-                        <button class="btn details-btn RegisterBtn">Send your Photos or Events</button>
+                        <button class="btn details-btn" id="photoBtn">Send your Photos or Events</button>
+                        <button class="btn details-btn RegisterBtn">Rules</button>
                         <div class="bold green small-font">Show your own viewing skills</div>
                         <div class="bold red small-font">Send your Photos or Scripts in regular basis to our Page Admin</div>
                     </div>
@@ -306,8 +306,8 @@
                         </div>
                     </div>
                     <div class="details-item details-btns">
-                        <button class="btn details-btn" id="csBtn">Rules</button>
-                        <button class="btn details-btn RegisterBtn">Launch Your Speech</button>
+                        <button class="btn details-btn" id="csBtn">Launch Your Speech</button>
+                        <button class="btn details-btn RegisterBtn">Rules</button>
                         <div class="bold green small-font">Keep remember well Speakers are our real Heros ..Do you know Sandip Maheshwari ??</div>
                         <div class="bold red small-font">Quitters never win & Winners never Quit</div>
                     </div>
@@ -358,8 +358,8 @@
 
                     </div>
                     <div class="details-item details-btns">
-                        <button class="btn details-btn" id="nfsBtn">Rules</button>
-                        <button class="btn details-btn RegisterBtn">Join Now</button>
+                        <button class="btn details-btn" id="nfsBtn">Join Now</button>
+                        <button class="btn details-btn RegisterBtn">Rules</button>
                         <div class="bold green small-font">You can directly message to our admin for immediate join request</div>
                         <div class="bold red small-font">*Please Don't Copy Any post from any other page or any public profile</div>
                     </div>
@@ -739,7 +739,7 @@
                         </p>
 
                         <div>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14739.66517356961!2d88.3425578!3d22.5448082!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb540e4bce39763!2sVictoria+Memorial!5e0!3m2!1sen!2sin!4v1539973592551" width="600" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14739.66517356961!2d88.3425578!3d22.5448082!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb540e4bce39763!2sVictoria+Memorial!5e0!3m2!1sen!2sin!4v1539973592551" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
@@ -751,10 +751,10 @@
         <div class="container">
             <div style="float:left; line-height: 40px;">
                 Copyright © 2020-21
-                <a class="name" href="https://www.facebook.com/134416510668694">DEBOJYOTI DAS</a>
+                <a class="name" href="https://www.facebook.com/purushtantra">DEBOJYOTI DAS</a>
             </div>
             <div style="float:right">
-                <a class="socialBtn" target="_blank" href="https://www.facebook.com/134416510668694">
+                <a class="socialBtn" target="_blank" href="https://www.facebook.com/purushtantra">
                     <i class="fa fa-facebook"></i>
                 </a>
                 <a class="socialBtn" href="mailto:debojyoti.das@purushtantra.com">
@@ -779,12 +779,12 @@
         const wow = new WOW(wowConfig);
         wow.init();
         const registerUrl = '#';
-        const codeStromUrl = '#';
-        const csUrl = '#';
-        const nfsUrl = '#';
-        const photoUrl = '#';
-        const bmaUrl = '#';
-        const techUrl = '#';
+        const codeStromUrl = 'https://docs.google.com/forms/d/e/1FAIpQLSfJX8x2YJ4_vf7YcxoiPAy6-n68Ux5wW9sJW8WA4CqtVl8y5A/viewform';
+        const csUrl = 'https://m.me/purushtantra';
+        const nfsUrl = 'https://www.facebook.com/purushtantra';
+        const photoUrl = 'https://docs.google.com/forms/d/e/1FAIpQLScBPjHwByyxy7OWbsr49eVJM9H4zaadq8knGv8ybknNoucBpA/viewform';
+        const bmaUrl = 'https://www.facebook.com/purushtantra';
+        const techUrl = 'https://m.me/purushtantra';
         const eventDate = 'March 2018';
 
         document.getElementById('csBtn').onclick = () => window.open(csUrl, '_blank');
