--- a/index.html
+++ b/index.html
@@ -665,7 +665,7 @@
                     <a target="_blank" href="#">
                         <h5>Dibyendu Bose</h5>
                     </a>
-                    <p>Singer & Vocalist</p>
+                    <p>Singer</p>
                 </div>
                 <div class="team-member">
                     <a target="_blank" href="#">
@@ -678,6 +678,12 @@
                         <h5>Subrata Oraw</h5>
                     </a>
                     <p>Content Writer & Editor</p>
+                </div>
+                <div class="team-member">
+                    <a target="_blank" href="#">
+                        <h5>Bidisha Chatterjee</h5>
+                    </a>
+                    <p>Singer & Editor</p>
                 </div>
             </div>
 
@@ -739,7 +745,7 @@
                         </p>
 
                         <div>
-                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14739.66517356961!2d88.3425578!3d22.5448082!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb540e4bce39763!2sVictoria+Memorial!5e0!3m2!1sen!2sin!4v1539973592551" width="450" height="450" frameborder="0" style="border:0" allowfullscreen></iframe>
+                            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d14739.66517356961!2d88.3425578!3d22.5448082!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb540e4bce39763!2sVictoria+Memorial!5e0!3m2!1sen!2sin!4v1539973592551" width="450" height="350" frameborder="0" style="border:0" allowfullscreen></iframe>
                         </div>
                     </div>
                 </div>
@@ -778,7 +784,7 @@
         }
         const wow = new WOW(wowConfig);
         wow.init();
-        const registerUrl = '#';
+        const registerUrl = 'https://m.facebook.com/story.php?story_fbid=455355551908120&id=134416510668694';
         const codeStromUrl = 'https://docs.google.com/forms/d/e/1FAIpQLSfJX8x2YJ4_vf7YcxoiPAy6-n68Ux5wW9sJW8WA4CqtVl8y5A/viewform';
         const csUrl = 'https://m.me/purushtantra';
         const nfsUrl = 'https://www.facebook.com/purushtantra';
