--- a/index.html
+++ b/index.html
@@ -602,18 +602,18 @@
                     <p>Writer & Musician</p>
                 </div>
                 <div class="team-member">
-                    <h5>Sweta</h5>
-                    <p>Content Writer</p>
+                    <h5>Ankita</h5>
+                    <p>Drawing Artist</p>
                 </div>
                 <div class="team-member">
                     <h5>Sreeza</h5>
                     <p>Content Writer</p>
                 </div>
                 <div class="team-member">
-                    <h5>Pranita</h5>
-                    <p>Writer & Penographer</p>
+                    <h5>Atanu</h5>
+                    <p>Drawing Artist</p>
                 </div>
-                <div class="team-member">
+                <div class="team-member">.
                     <h5>Rishov</h5>
                     <p>Content Writer</p>
                 </div>
@@ -652,6 +652,14 @@
                 <div class="team-member">
                     <h5>Swarupa</h5>
                     <p>Writer & Dancer</p>
+                </div>
+                <div class="team-member">
+                    <h5>Priyadarshini</h5>
+                    <p>Content Writer</p>
+                </div>
+                <div class="team-member">
+                    <h5>Sayantan</h5>
+                    <p>Photographer</p>
                 </div>
             </div>
             <div class="wow slideInRight team-members">
