Selfie contest commit

--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
         <div class="event-details 1-event">
             <i class="fa fa-3x fa-times modal-close-btn" eventNo="1" aria-hidden="true"></i>
             <div class="details">
-                <h1>Question to our society ..Why ?</h1>
+                <h1>Send Your Best Selfie & win CASH Prize</h1>
                 <div class="details-card">
                     <div class="details-item details-img">
-                        <img src="./img/events/techno_buzz_comp.jpg" alt="Event">
+                        <img src="./img/events/techno_buzz_comp.jpeg" alt="Event">
                     </div>
                     <div class="details-item details-category">
                         <h5>Details</h5>
@@ -47,7 +47,7 @@
                             <tr>
                                 <td class="bold">Topic</td>
                                 <td>:</td>
-                                <td>Ask your intra minded questions</td>
+                                <td>PURUSHTANTRA Selfie Contest</td>
                             </tr>
                             <tr>
                                 <td class="bold">since</td>
@@ -57,34 +57,34 @@
                             <tr>
                                 <td class="bold">Rule</td>
                                 <td>:</td>
-                                <td>Which topics you want to ask people or our society</td>
+                                <td>By observing Like ,Share & Reach we will decide 1st 2nd & 3rd Winner</td>
                             </tr>
                             <tr>
-                                <td class="bold">Range</td>
+                                <td class="bold">Prize</td>
                                 <td>:</td>
-                                <td>Here not any perticular limit but don't say anything against on anyone</td>
+                                <td>1st Prize : Rs.500/- & a Lunch with Page Members , 2nd Prize : Rs.200/- & 3rd Prize : Rs.100/-</td>
                             </tr>
                         </table>
                         <p>
-                            <i>(Try to maintain these)</i>
+                            <i>(PrizeMoney will be sent to your Online UPI id)</i>
                         </p>
                     </div>
                     <div class="details-item details-rules">
                         <div>
-                            Show your skill by asking which questions those was never asked by anyone
+                            In these LOCKDOWN days, Post & share your best Single selfie to earn Cash prize
                         </div>
                         <div class="prizeMoney">
-                            <h5>Specification</h5>
-                            <p>Be positive & loyal</p>
-                            <p>don't ask anything cheap</p>
+                            <h5>About the Selfie</h5>
+                            <p>Selfie must should be Single(Couple & groupfie not allowed)</p>
+                            <p>Selfies of Winners we will publish our Page by mentioning their's name</p>
                         </div>
 
                     </div>
                     <div class="details-item details-btns">
-                        <button class="btn details-btn" id="techBtn">Ask Now</button>
-                        <button class="btn details-btn RegisterBtn">Rules</button>
-                        <div class="bold green small-font">(You can also contact our admin or members)</div>
-                        <div class="bold red small-font">selected questions will be publish by page including your name</div>
+                        <button class="btn details-btn" id="techBtn">Send your Selfie</button>
+                        <button class="btn details-btn" id="btnContest">Rules of the Contest</button>
+                        <div class="bold green small-font">(Result will publish at 1st May)</div>
+                        <div class="bold red small-font">*Admin's decision will considered as Final</div>
                     </div>
 
                 </div>
@@ -390,18 +390,18 @@
                     <div eventNo="1" data-wow-duration="1s" class="event wow slideInLeft">
                         <div class="card">
                             <div class="card-item card-front">
-                                <img src="./img/events/techno_buzz_comp.jpg" alt="techno-buzz">
+                                <img src="./img/events/selfie.jpg" alt="techno-buzz">
                                 <div class="headText">
-                                    <p>Question to our Society</p>
+                                    <p>Click here to Register</p>
                                 </div>
                             </div>
                             <div class="card-item card-back">
-                                <img src="./img/events/techno_buzz_comp.jpg" alt="techno-buzz">
+                                <img src="./img/events/techno_buzz_comp.jpeg" alt="techno-buzz">
                                 <div class="eventName">
-                                    <p>Question to Society</p>
+                                    <p>SELFIE CONTEST</p>
                                 </div>
                                 <div class="headText">
-                                    <p>Explore</p>
+                                    <p>Send Your Best Selfie</p>
                                 </div>
                             </div>
                         </div>
@@ -661,6 +661,7 @@
                     <h5>Sayantan</h5>
                     <p>Photographer</p>
                 </div>
+                
             </div>
             <div class="wow slideInRight team-members">
                 <h4>SPECIAL THANKS TO</h4>
@@ -688,6 +689,12 @@
                         <h5>Bidisha Chatterjee</h5>
                     </a>
                     <p>Singer & Editor</p>
+                </div>
+                <div class="team-member">
+                    <a target="_blank" href="#">
+                        <h5>Parnashree Brahma</h5>
+                    </a>
+                    <p>Lead Vocalist</p>
                 </div>
             </div>
 
@@ -794,15 +801,17 @@
         const nfsUrl = 'https://www.facebook.com/purushtantra';
         const photoUrl = 'https://docs.google.com/forms/d/e/1FAIpQLScBPjHwByyxy7OWbsr49eVJM9H4zaadq8knGv8ybknNoucBpA/viewform';
         const bmaUrl = 'https://www.facebook.com/purushtantra';
-        const techUrl = 'https://m.me/purushtantra';
-        const eventDate = 'March 2018';
-
+        const techUrl = 'https://docs.google.com/forms/d/e/1FAIpQLSc6_DUHivNJjiXyFSslM3cgfg5Vx7coDSR8lXZ8ewXKX9IEdg/viewform';
+        const conUrl = 'https://www.facebook.com/134416510668694/posts/459710008139341';
+        const eventDate = '27 April, 2020';
+        
         document.getElementById('csBtn').onclick = () => window.open(csUrl, '_blank');
         document.getElementById('codeStromBtn').onclick = () => window.open(codeStromUrl, '_blank');
         document.getElementById('nfsBtn').onclick = () => window.open(nfsUrl, '_blank');
         document.getElementById('photoBtn').onclick = () => window.open(photoUrl, '_blank');
         document.getElementById('bmaBtn').onclick = () => window.open(bmaUrl, '_blank');
         document.getElementById('techBtn').onclick = () => window.open(techUrl, '_blank');
+        document.getElementById('btnContest').onclick = () => window.open(conUrl, '_blank');
 
         [...document.getElementsByClassName('RegisterBtn')].forEach(e =>
             e.onclick = () => window.open(registerUrl, '_blank'));
