--- a/index.html
+++ b/index.html
@@ -787,7 +787,7 @@
         const csUrl = 'https://m.me/purushtantra';
         const nfsUrl = 'https://www.facebook.com/purushtantra';
         const photoUrl = 'https://docs.google.com/forms/d/e/1FAIpQLScBPjHwByyxy7OWbsr49eVJM9H4zaadq8knGv8ybknNoucBpA/viewform';
-        const bmaUrl = 'https://drive.google.com/drive/folders/1XSKhjd5dNamCpM4OdGyYtk_pW9vrI3Ys';
+        const bmaUrl = 'https://drive.google.com/file/d/150Sv3j-SLRg3vOquTFRadDcJYDT9C-va/view?usp=sharing';
         const techUrl = 'https://docs.google.com/forms/d/e/1FAIpQLSc6_DUHivNJjiXyFSslM3cgfg5Vx7coDSR8lXZ8ewXKX9IEdg/viewform';
         const conUrl = 'https://www.facebook.com/134416510668694/posts/459710008139341';
         const pubRej = 'https://docs.google.com/forms/d/e/1FAIpQLSczA7w04DakW06AaOZwKzptNM41mXZubqmWxLUG-4HaPU9TKw/viewform';
