--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
                             <tr>
                                 <td class="bold">Event Date</td>
                                 <td>:</td>
-                                <td class="dateEvent2">Will be Announced soon</td>
+                                <td class="dateEvent2">13th May , 2020</td>
                             </tr>
                             <tr>
                                 <td class="bold">Host of Compitition</td>
@@ -123,7 +123,7 @@
                             </tr>
                         </table>
                         <p>
-                            <i>(Note our posts)</i>
+                            <i>(Announced PrizeMoney will be sent to your Online UPI id)</i>
                         </p>
                     </div>
                     <div class="details-item details-rules">
